Prevent 'FEATURED SPONSOR' from wrapping

--- a/_assets/stylesheets/featured-sponsor.scss
+++ b/_assets/stylesheets/featured-sponsor.scss
@@ -33,7 +33,7 @@
   clear: right;
   color: #666;
   float: right;
-  font-size: 70%;
+  font-size: 69%;
   margin-top: 5px;
   text-align: center;
   text-transform: uppercase;
